[package]
name = "kvstore"
version = "0.1.0"
authors = ["gkkwong", "ssa354"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9.3"
walkdir = "2.3.2"
serial_test = "0.5.1"