[package]
name = "kvstore"
version = "0.1.0"
authors = ["gkkwong", "ssa354"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9.3"
walkdir = "2.3.2"